li he posat marica davant

--- a/HundirLaFlotaServlets/WebContent/index.html
+++ b/HundirLaFlotaServlets/WebContent/index.html
@@ -9,7 +9,7 @@
 <h1>Hundir la flota</h1>
 <form action="HundirFlotaServlet" method="get">
 	
-	Pulse el bot&oacute;n si quieres empezar una emocionante partida de: <input type="submit" value="Hundir la Flota">
+	MaricaPulse el bot&oacute;n si quieres empezar una emocionante partida de: <input type="submit" value="Hundir la Flota">
 	
 </form>
 
